feat(api-first): generate api with simple commands
- set getComments operationId
- add Case to strip
